--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <div class="card">
-            <img class="avatar" src="images/brian.jpeg">
+            <img class="avatar" src="brian.jpeg">
             <div class="text" >
                 <h3>Brian Peinado</h3>
                 <p>Frontend Developer</p>
